--- a/contact.html
+++ b/contact.html
@@ -67,17 +67,11 @@
         <h1 class="mb-5">Let's get in touch!</h1>
         <h3>Email</h3>
         <p>
-          <a href="mailto:nomcebom40@gmail.com"> nomcebom40@gmail.com</a>
+          <a href="mailto:nmthembu2797@gmail.com"> nmthembu2797@gmail.com</a>
         </p>
         <h3>TikTok</h3>
         <p>
           <a href="https://www.tiktok.com/@thecoderhub" target="_blank">
-            @thecoderhub
-          </a>
-        </p>
-        <h3>Instagram</h3>
-        <p>
-          <a href="https://www.instagram.com/@thecoderhub" target="_blank">
             @thecoderhub
           </a>
         </p>
@@ -100,20 +94,13 @@
       </div>
       <div class="d-flex justify-content-center mb-5">
         <a
-          href="mailto:nomcebom40@gmail.com"
+          href="mailto:nmthembu2797@gmail.com"
           class="email-link"
           title="Email Nomcebo"
-          >nomcebom40@gmail.com</a
+          >nmthembu2797@gmail.com</a
         >
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a
-          href="https://www.instagram.com/thecoderhub"
-          target="_blank"
-          title="Instagram Profile"
-        >
-          <i class="fa-brands fa-instagram"></i
-        ></a>
         <a
           href="https://www.github.com/thecoderhub"
           target="_blank"
