--- a/work.html
+++ b/work.html
@@ -67,27 +67,35 @@
 
         <div class="row">
           <div class="col-md-6 mb-4">
-            <a href="https://vanilla-weather-noma.netlify.app/" target="_blank">
-              <img
-                src="images/Weather App.png"
-                class="img-fluid mb-3 rounded"
-                alt="Weather App preview"
-              />
-            </a>
-            <h3 class="text-center m-0">Vanilla Weather App</h3>
+            <img
+              src="images/Weather App.png"
+              class="img-fluid mb-3 rounded"
+              alt="Weather App preview"
+            />
+            <a
+              href="https://vanilla-weather-noma.netlify.app/"
+              target="_blank"
+              class="project-link"
+            >
+              <h3 class="text-center m-0">Vanilla Weather App</h3></a
+            >
             <p class="text-center text-muted">
               Built with HTML; CSS and JAVASCRIPT
             </p>
           </div>
           <div class="col-md-6 mb-4">
-            <a href="https://todo-list-react-noma.netlify.app/" target="_blank">
-              <img
-                src="images/ToDo-List.png"
-                class="img-fluid mb-3 rounded"
-                alt="ToDo App preview"
-              />
-            </a>
-            <h3 class="text-center m-0">To-do List</h3>
+            <img
+              src="images/ToDo-List.png"
+              class="img-fluid mb-3 rounded"
+              alt="ToDo App preview"
+            />
+            <a
+              href="https://todo-list-react-noma.netlify.app/"
+              target="_blank"
+              class="project-link"
+            >
+              <h3 class="text-center m-0">To-do List</h3></a
+            >
             <p class="text-center text-muted">Built with REACT</p>
           </div>
           <div class="col-md-6 mb-4">
@@ -96,16 +104,20 @@
               class="img-fluid mb-3 rounded"
               alt="Dictionary App preview"
             />
-            <h3 class="text-center m-0">Dictionary App</h3>
-            <p class="text-center text-muted">
-              Built with HTML and CSS with React
-            </p>
+            <a
+              href="https://github.com/Nomcebo-coder-hub/file-organiser-python"
+              target="_blank"
+              class="project-link"
+            >
+              <h3 class="text-center m-0">File Organiser</h3></a
+            >
+            <p class="text-center text-muted">Built with PYTHON</p>
           </div>
           <div class="col-md-6 mb-4">
             <img
-              src="images/Translation.png"
+              src="images/File Organiser.png"
               class="img-fluid mb-3 rounded"
-              alt="Translation project preview"
+              alt="File Organiser project preview"
             />
             <h3 class="text-center m-0">Translation App</h3>
             <p class="text-center text-muted">
