--- a/index.html
+++ b/index.html
@@ -137,14 +137,13 @@
           <div class="project-description">
             <h2 class="mb-5">File organiser</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              My File Organiser was built with Python. I created a script that
+              organises the files alphabetically in one one folder.
+              </p>
+              <a href="/work.html" class="btn btn-branding-outline">
+                Learn more
+              </a>
             </p>
-            <a href="/work.html" class="btn btn-branding-outline">
-              Learn more
-            </a>
           </div>
         </div>
       </div>
